--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -26,29 +26,41 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 ====Translations====
 '''tree'''
 {{top}}
+*Bosnian: [[šljiva#Bosnian|šljiva]] {{f}}
 *Catalan: [[pruner]] {{m}}
+*Croatian: [[šljiva#Croatian|šljiva]] {{f}}
 *Dutch: [[pruimenboom]]
 *Finnish: [[luumupuu]]
 *Italian: [[prugno]] {{m}}
 {{mid}}
 *Japanese: [[セイヨウスモモ]] (seiyō sumomo)
+*Serbian:
+*:Cyrillic: [[шљива#Serbian|шљива]] {{f}}
+*:Latin: [[šljiva#Serbian|šljiva]] {{f}}
 *Spanish: [[ciruelo]]
 *Swedish: [[plommonträd]] {{n}}
 {{bottom}}
 
 '''fruit'''
 {{top}}
+*Bosnian: [[šljiva#Bosnian|šljiva]] {{f}}
 *Catalan: [[pruna]] {{f}}
+*Croatian: [[šljiva#Croatian|šljiva]] {{f}}
 *Dutch: [[pruim]]
 *[[Esperanto]]: [[pruno]]
 *Finnish: [[luumu]]
 *French: [[prune]] {{f}}
+*[[Hindi]]: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 *Italian: [[prugna]] {{f}}
 {{mid}}
 *Japanese: [[セイヨウスモモ]] (seiyōsumomo), [[プラム]] (puramu)
+*Serbian:
+*:Cyrillic: [[шљива#Serbian|шљива]] {{f}}
+*:Latin: [[šljiva#Serbian|šljiva]] {{f}}
 *Slovakian: [[slivka]] {{f}}
 *Spanish: [[ciruela]]
 *Swedish: [[plommon]] {{n}}
+*Turkish: [[erik]]
 {{bottom}}
 
 '''colour'''
@@ -77,15 +89,12 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 *Arabic: [[برقوق]] (barqūq), [[خوخ]] (khaukh)
 *[[Binisayâ]]: [[sirwelas]]
-*Bosnian: [[šljiva]] {{f}}
 *Bulgarian: [[слива]] (sliva) {{f}} (2)
-*[[Burmese]]: [[မက္မန္းသီး]] (makmansii)
+*Burmese: [[မက္မန္းသီး]] (makmansii)
 *Chinese: [[李子]] (lǐzi)
-*Croatian: [[šljiva]] {{f}} (2, 1)
 *Czech: [[švestka]] {{f}}, [[slíva]] {{f}}
 *[[Old English]]: [[plūme]] {{f}}
 *Estonian: [[ploom]]
-*[[Farsi]]: [[آلو]] (alu), [[گوجه]] (gujah)
 *[[Frisian]]: [[prom]] (2), [[rezyn]] (5)
 *Galician: [[ameixeira]] {{f}} (1), [[ameixa]] {{f}} (2)
 *German: [[Pflaume]] {{f}}
@@ -93,7 +102,6 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *[[Old High German|German, Old High]]: [[pfrūma]]
 *Greek: [[δαμασκηνιά]] (dhamaskiniá) {{f}} (1), [[δαμάσκηνο]] (dhamáskino) {{n}} (2)
 *Hebrew: [[שזיף]] (shozif) {{m}}
-*Hindi: [[आलूचा]] (ālūcā)
 *Hungarian: [[szilva]]
 *Icelandic: [[plóma]] {{f}}
 *Irish: [[pluma]] {{m}}, [[prúna]] {{m}}
@@ -102,13 +110,12 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *Lithuanian: [[slyva]] {{f}} (1, 2), [[slyvinis]] {{m}} (3)
 *Luxembourgish: [[Praum]] {{f}}, [[Promm]] {{f}}
 *Norwegian: [[plomme]]
+*[[Persian]]: [[آلو]] (alu), [[گوجه]] (gujah)
 *Polish: [[śliwka]] {{f}} (2), [[rodzynka]] {{f}} (5)
 *Portuguese: [[ameixa]] {{f}} (2)
 *Russian: [[слива]] (sliva) {{f}} (2)
 *[[Sanskrit]]: [[कर्कन्धुः]] (karkandhuḥ)
-*Serbian: [[шљива]] (šljiva) {{f}} (2,1)
 *Thai: [[ลูกพุทราฝรั่ง]] (luukphutrafrang)
-*Turkish: [[erik]]
 *Vietnamese: [[quả mận]], [[trái mơ]]
 *[[Volapük]]: [[plöm]]
 *Welsh: [[eirinen]] {{f}}
