--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -21,7 +21,7 @@ Anglo Saxon felt; akin to Dutch ''[[vilt]]'', German ''[[filz]]'', and possibly 
 *To know whether sheep are sound or not, see that the '''felt''' be loose - [[Mortimer]]
 
 =====Translations=====
-*Chinese Characters: [[毯子]]
+*Chinese Characters: [[毛氈]]
 *Danish: [[filt]] ''n''
 *Dutch: [[vilt]] ''n''
 *Finnish: [[huopa]] (1)
