--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -12,16 +12,16 @@
 
 ====Translations====
 *Finnish: [[oksa]] (1), [[haara]] (2), [[ala]] (3)
-*{{fr}}: [[branche]] {{f}}
+*French: [[branche]] {{f}}
 *German: [[Filiale]] {{f}} (3)
 *{{io}}: brancho, fako (of a science)
-*[[Indonesian]]: [[cabang]]
+*Indonesian: [[cabang]]
 *Italian: [[ramo]] {{m}}, [[filiale]] {{f}}
 *Japanese: [[枝]] ([[えだ]], eda) (of tree), [[支店]] ([[してん]], shiten) (of company)
 *Old English: [[bog|bōg]] {{n}}
 *Polish: [[gałąź]] {{f}}
-*[[Slovene]]: [[veja]] {{f}} (1,2)
-*Spanish: [[rama]] {{m}}
+*Slovene: [[veja]] {{f}} (1,2)
+*Spanish: [[rama]] {{f}}
 *Swedish: [[bransch]] (3)
 *Turkish: [[dal]] (1, 2, 4), [[şube]] (3)
 *{{vi}}: [[nhánh]] (1, 3, 4)
