--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -38,7 +38,7 @@
 ----
 
 ==Japanese==
-[[Category:Japanese language|がわ]]
+[[Category:Japanese language|かわ']]
 ===Noun===
 {{janoun|[[がわ]]|[[gawa]]}}
 # [[side]]
