--- a/en/時/時.17003.wikitext
+++ b/en/時/時.17003.wikitext
@@ -41,6 +41,19 @@
 ===Kanji===
 {{kanji|[[じ]] (ji), [[し]] (shi)|[[とき]] (toki), [[これ]] (kore)}}
 
+===Compounds===
+*[[時間]]
+*[[時期]]
+*[[時機]]
+*[[時季]]
+*[[時勢]]
+*[[時世]]
+*[[時制]]
+*[[時節]]
+*[[時速]]
+*[[時短]]
+*[[時雨]]
+
 ----
 
 == Korean [[Hanja]] ==
@@ -53,6 +66,11 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': si
 ** '''[[McCune-Reischauer]]''': si
 ** '''[[Yale]]''': si
+
+----
+
+==Vietnamese==
+*thì
 
 ----
 
