--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -18,7 +18,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,21 +30,19 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jou2
 
-* '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[そう]] (sō), [[さつ]] (satsu)
 ** '''[[Kun]]''': [[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)
 
-* '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
 * '''[[Hangeul]]''': 조
 
@@ -72,6 +70,9 @@
 * '''Big5''':
 ** Hex: A6AD
 ** Decimal: 42669
+
+[[Category:Japanese kanji]]
+[[Category:Grade 1 kanji]]
 
 [[hu:早]]
 [[pl:早]]
