--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /pen/
-*[[w:SAMPA|SAMPA]]: /pen/
+*{{IPA|/pen/}}
+*{{SAMPA|/pen/}}
 *{{audio|en-us-pen.ogg|Audio (US)}}
 *{{audio|en-us-inlandnorth-pen.ogg|Audio (US-Inland North)}}
 
@@ -11,11 +11,11 @@
 
 #A utensil, usually [[tubular]] in form, containing ink used to [[write]] or make marks.
 #: ''He took notes with a '''pen'''.''
-# A mark made with [[ink]]
+# A mark made with [[ink]].
 #: ''I need some stain remover, this mark is in '''pen'''.''
 #An [[enclose]]d area used to contain [[domesticated]] animals, especially [[sheep]] or [[cattle]].
 #: ''There are two steers in the third '''pen'''.''
-#{{baseball}} The [[bullpen]]
+#{{baseball}} The [[bullpen]].
 #: ''Two righties are up in the '''pen'''.''
 #A female [[swan]].
 
@@ -30,44 +30,59 @@
 
 ====Translations====
 (''writing utensil'')
-*Arabic: [[قلم]]
-*Dutch: pen ''f''
+{{top}}
+*Arabic: {{ARchar|[[قلم]]}} (qálam)
+*Dutch: pen {{f}}
 *Finnish: [[mustekynä]]
-*French: [[stylo]] ''m''
-*German: [[Stift]] ''m''
+*French: [[stylo]] {{m}}
+*German: [[Stift]] {{m}}
 *Indonesian: pen, [[pena]]
-*Irish: [[peann]] ''m''
-*Italian: [[penna]] ''f''
+*Irish: [[peann]] {{m}}
+*Italian: [[penna]] {{f}}
+{{mid}}
 *Japanese: [[ペン]] (pen)
-*Koryese: ir
-*Polish: [[pióro]] ''n'', [[długopis]] ''m''
-*Portuguese: [[caneta]] ''f''
-*Russian: [[ручка]] ''f''
-*Spanish: [[pluma]] ''f''
+*Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
+*Portuguese: [[caneta]] {{f}}
+*Russian: [[ручка]] (rúčka) {{f}}
+*Spanish: [[pluma]] {{f}}
 *Swedish: [[penna]]
 *Turkish: [[kalem]]
+{{bottom}}
 
 (''an enclosed area'')
-*French: [[enclos]] ''m''
-*Italian: [[recinto]] ''m'', [[chiuso]] ''m'', (''for sheep'') [[ovile]] ''m'', recinto, chiuso
+{{top}}
+*French: [[enclos]] {{m}}
+{{mid}}
+*Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, (''for sheep'') [[ovile]] {{m}}, recinto, chiuso
+*Russian: [[загон]] (zagón) {{m}}
+{{bottom}}
 
 (''female swan'')
-*French: [[cygne]] [[femelle]] ''m'' (''there is no special word in French for'' '''pen''' ''in this sense'')
+{{top}}
+*French: [[cygne]] [[femelle]] {{m}}
+{{mid}}
+*Russian: [[лебёдка]] (lebjódka) {{f}}
+{{bottom}}
 
 ===Transitive verb===
 '''to pen''' ([[penned]] / [[pent]], penned / pent)
 
-#To write (an article, a book, etc)
-#To enclose. The irregular past tense ''pent'' is primarilly used in a figurative sense in the phrase "pent up".
+#To write (an article, a book, etc.)
+#To enclose. The irregular past tense ''pent'' is primarily used in a figurative sense in the phrase "pent up".
 
 ====Translations====
 (''to write'')
+{{top}}
 *French: [[écrire]]
 *Italian: [[scrivere]]
+{{mid}}
 *Portuguese: [[escrever]]
+*Russian: [[писать]] / [[написать]] (pisát’ / napisát’)
+{{bottom}}
 
 
 ----
+
 ==Dutch==
 ===Pronunciation===
 *[[w:IPA|IPA]]: /pεn/
