--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -23,6 +23,7 @@
 *Finnish: [[tappelu]] (2), [[ottelu]] (4)
 *French: [[bagarre]] {{f}}, [[combat]]
 *German: [[Kampf]] ''m'' (1,4), [[Wettkampf]] ''m'' (2), [[Keilerei]] ''f'' (3)
+*Italian: [[lotta]] ''f'', [[combattimento]] ''m'', [[battaglia]] ''f'', [[rissa]] ''f''
 {{mid}}
 *Polish: [[walka]] {{f}}
 *Spanish: [[lucha]]
@@ -36,6 +37,7 @@
 #:''The government pledged to '''fight''' corruption.''
 ====Translations====
 *German: [[kämpfen]] (1), [[bekämpfen]] (2)
+*Italian: [[lottare] (1), [[combattere]] (2)
 *Old English: [[sacan]]
 
 ====Translations to be checked====
@@ -47,7 +49,6 @@
 *Hebrew: [[קרב]]
 {{mid}}
 *Indonesian: [[tarung]], [[tengkar]], [[serang]]
-*Italian: [[lotta]]
 *Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau), [[闘]] ([[とう]], tô)
 *Latin: [[pugnare]]
 *Romanian: [[luptă]] {{f}}, [[bătaie]] {{f}}
