--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -37,7 +37,7 @@
 #:''The government pledged to '''fight''' corruption.''
 ====Translations====
 *German: [[kämpfen]] (1), [[bekämpfen]] (2)
-*Italian: [[lottare] (1), [[combattere]] (2)
+*Italian: [[lottare]] (1), [[combattere]] (2)
 *Old English: [[sacan]]
 
 ====Translations to be checked====
