--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -28,7 +28,10 @@
 
 == Japanese ==
 ===Kanji===
-{{kanji2|[[こう]] ([[kō]]), [[く]] ([[ku]]), [[きく]] ([[kiku]])|[[あか]] ([[aka]]), [[はじ]] ([[haji]])}}
+{{kanji
+|[[こう]] ([[kō]]), [[く]] ([[ku]]), [[きく]] ([[kiku]])
+|[[あか]] ([[aka]]), [[はじ]] ([[haji]])}}
+
 ===Noun===
 {{janoun|あか|aka}}
 # scum
