--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -71,9 +71,11 @@
 
 ==Japanese==
 ===Kanji===
-{{kanji2|[[せい]] (sei), [[しょう]] (shō)|[[ほし]] (hoshi)}}
+{{kanji
+|[[せい]] (sei), [[しょう]] (shō)
+|[[ほし]] (hoshi)}}
 ===Noun===
-{{janoun|ほし|hoshi}}
+{{janoun|[[ほし]]|[[hoshi]]}}
 # A [[stellar]] object, e.g. [[star]], [[planet]], satellite, or a [[comet]].
 
 ===Proper noun===
