--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -9,7 +9,7 @@
 #a [[pale]] [[golden]] [[brown]] [[colour]].
 
 ===Usage note===
-: In the English language, it is only one a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurence in other languages. 
+: In the English language, it is only one of a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurence in other languages. 
 
 ====Translations====
 '''fair skinned/haired person'''
