sorttranstables out <beautiful#724547>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -10,6 +10,44 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 #possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
 #''(of the weather):'' pleasant; clear.
 
+====Translations====
+'''very attractive'''
+{{top}}
+*Afrikaans: [[mooi]]
+*Albanian:  i bukur ''m'', e bukur ''f''
+*Anglo-Saxon: [[wlitig]]
+*Arabic: [[جميل]]
+*Breton: [[brav]], [[kaer]]
+*Bulgarian:[[красив, прекрасен]]
+*Chinese: [[美]] (měi, meili, mei3li4)
+*Dutch: [[mooi]]
+*Esperanto: [[bela]]
+*Estonian: [[kaunis]] [[ilus]]
+*Fijian: [[totoka]]
+*Finnish: [[kaunis]]
+*French: [[beau]] ''m'', [[belle]] ''f''
+*Faeroese: [[vakur]] ''m'', [[vøkur]] ''f'' [[vakurt]] ''n''
+*Frisian: [[moai]], [[kreas]]
+*German: [[schön]]
+{{mid}}
+*Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
+*Italian: [[bello]]
+*Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
+*Latin: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
+*Polish: [[piękny]]
+*Portuguese: [[belo]] ''m'', [[bela]] ''f'', [[bonito]] ''m'', [[bonita]] ''f''
+*Russian: [[красивый]],[[прекрасный]]
+*Spanish: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
+*Slovak: [[krásny]] ''m'', krásna ''f'', krásne ''n''
+*Swedish: [[vacker]]
+*Vietnamese: [[đẹp]], [[đẹp đẽ]]
+*Turkish: [[güzel]]
+{{bottom}}
+
+'''pleasant, clear weather'''
+{{top}}
+{{mid}}
+{{bottom}}
 ====Synonyms====
 *[[attractive]]
 *[[cute]]
@@ -42,35 +80,6 @@ Term meaning "What a mess!" or "What a screw-up!"
 
 '''''Usage Note:''''' ''Beautiful'' can also be exclaimed by someone to mean "What a thing of beauty!"  ('''Example:'''  ''Beautiful!  What a catch!'' [referring to an athlete catching a ball]).  In this usage, ''beautiful'' would generally be labeled an adjective, not an interjection.
 
-=== Translations ===
-*Afrikaans: [[mooi]]
-*Albanian:  i bukur ''m'', e bukur ''f''
-*Anglo-Saxon: [[wlitig]]
-*Arabic: [[جميل]]
-*Breton: [[brav]], [[kaer]]
-*Bulgarian:[[красив, прекрасен]]
-*Chinese: [[美]] (měi, meili, mei3li4)
-*Dutch: [[mooi]]
-*Esperanto: [[bela]]
-*Estonian: [[kaunis]] [[ilus]]
-*Fijian: [[totoka]]
-*Finnish: [[kaunis]]
-*French: [[beau]] ''m'', [[belle]] ''f''
-*Faeroese: [[vakur]] ''m'', [[vøkur]] ''f'' [[vakurt]] ''n''
-*Frisian: [[moai]], [[kreas]]
-*German: [[schön]]
-*Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
-*Italian: [[bello]]
-*Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
-*Latin: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
-*Polish: [[piękny]]
-*Portuguese: [[belo]] ''m'', [[bela]] ''f'', [[bonito]] ''m'', [[bonita]] ''f''
-*Russian: [[красивый]],[[прекрасный]]
-*Spanish: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
-*Slovak: [[krásny]] ''m'', krásna ''f'', krásne ''n''
-*Swedish: [[vacker]]
-*Vietnamese: [[đẹp]], [[đẹp đẽ]]
-*Turkish: [[güzel]]
 
 [[Category:1000 English basic words]]
 
