--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -52,9 +52,10 @@ flexed form of [[blond]]
 
 ===Noun===
 '''blonde''' {{f}}
-# ''(slang)'' [[girlfriend]], mostly used in Quebec [[Category: Quebec Slang]]
+# {{frslang}}, {{Quebec}} [[girlfriend]], mostly used in Quebec
 
 ----
+
 ==Swedish==
 ===Adjective===
 '''blonde'''
