--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From [[Serbo-Croatian]] [[jug|jugo]] (''south'') and '''slavija''' (''slavia'', the land of the [[Slavs]]).  Literally, ''the land of the south Slavs''.
+From [[Serbo-Croatian]] [[jug|jugo]] (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the south Slavs''.
 
 ===Alternate spelling===
 [[Jugoslavia]] (''common pre-WWII spelling'')
