[[Category:English proper nouns]] <Germany#727541>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -7,6 +7,7 @@
 *US {{SAMPA|/dZ3`:mIni/}}
 
 ===Proper noun===
+[[Category:English proper nouns]]
 '''Germany'''
 
 # Country in Central Europe. Official name: Federal Republic of Germany (Bundesrepublik Deutschland).
@@ -82,7 +83,6 @@
 *[[Prussia]]
 *[[Countries of the world]]
 
-[[Category:Proper nouns]]
 [[Category:Countries]]
 [[Category:Exonyms]]
 
