--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -88,7 +88,7 @@
 '''cut'''
 # {{Cricket}} of a shot played with a [[horizontal]] bat to hit the ball backward of point.
 # {{bodybuilding}}: Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
-# [[Circumcised]]
+# {{Slang}} [[Circumcised]]
 
 [[es:cut]]
 [[gl:Cut]]
