--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -32,7 +32,6 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': si6
 
-* '''Other info''': 
 
 ----
 
@@ -42,7 +41,6 @@
 ** '''[[On]]''': [[ぜ]] (ze), [[し]] (shi)
 ** '''[[Kun]]''': [[これ]] (kore), [[この]] (kono), [[ここ]] (koko)
 
-* '''Other info''':  
 
 ----
 
@@ -74,6 +72,8 @@
 * '''Big5''':
 ** Hex: AC4F
 ** Decimal: 44111
+
+[[Category:Japanese kanji]]
 
 [[fr:是]]
 [[hu:是]]
