--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -20,7 +20,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Breton: [[brav]], [[kaer]]
 *Bulgarian:[[красив, прекрасен]]
 *Chinese: [[美]] (měi, meili, mei3li4)
-*Danish: [[smuk, smukt, smukke (en, et, pl.)]]
+*Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] ''pl.''
 *Dutch: [[mooi]]
 *Esperanto: [[bela]]
 *Estonian: [[kaunis]] [[ilus]]
