--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -43,7 +43,6 @@
 *[[易于]]
 *[[易帜]]
 
-* '''Other info''': 
 
 ----
 
@@ -52,8 +51,7 @@
 * '''Readings'''
 ** '''[[On]]''': [[えき]] (eki), [[い]] (i)
 ** '''[[Kun]]''': [[やさしい]] (yasashii), [[かえる]] (kaeru), [[おさめる]] (osameru)
-
-* '''Other info''':  
+ 
 
 ----
 
@@ -85,5 +83,7 @@
 * '''Big5''':
 ** Hex: A9F6
 ** Decimal: 43510
+
+[[Category:Japanese kanji]]
 
 [[hu:易]]
