--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -7,6 +7,7 @@
 *{{audio|en-us-caught.ogg|Audio (US)}}
 *{{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 *{{audio|en-au-caught.ogg|Audio (Australia)}}
+*{{audio|en-uk-caught.ogg|Audio (UK)}}
 
 ===Verb===
 '''caught'''
