--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -20,6 +20,7 @@ From Anglo-Saxon '''''[[thunor]]'''''
 ====Translations====
 *[[Breton]]: [[kurun]] ''f'', [[taran]] ''m''
 *Chinese: [[雷]] (léi)
+*[[Czech]]: [[bouřka]] ''f''
 *Dutch: [[donder]] ''m''
 *[[Esperanto]]: [[tondro]]
 *Finnish: [[ukkonen]]
