--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -34,7 +34,5 @@
 {{bottom}}
 
 ====See also====
-*[[Countries of the world]]
-
-[[Category:Countries]]
+*[[Countries of the world
 [[io:Czech Republic]]
