--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -72,7 +72,7 @@
 
 == Japanese ==
 ===Kanji===
-{{kanji2|[[い]] (i)|[[こころ]] (kokoro), [[おもい]] (omoi), [[おもう]] (omou)}}
+{{kanji|[[い]] (i)|[[こころ]] (kokoro), [[おもい]] (omoi), [[おもう]] (omou)}}
 
 ====Compounds====
 *[[意味]]
