--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From Anglo-Saxon '''''[[thunor]]'''''
+Old English [[þunor]].
 
 === Pronunciation ===
 *[[w:AHD|AHD]]: /thŭn'dər/
