--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -51,6 +51,7 @@ Old English [[cuman]].
 *Latin: [[venire]]
 *Manchu: [[jimbi]]
 *Mongolian: [[ирэх]] (irekh)
+*Old English: [[cuman]]
 *Persian: {{FAchar|[[آمدن|آمَدَن]]}} (āmædæn)
 *Portuguese: [[vir]]
 *[[Rohingya]]: [[ai]]
