--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -4,8 +4,11 @@
 From Arabic ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' instead of ''zemt''.
 ===Noun===
 '''zenith'''
-# the point vertically above a given position or observer
-# highest point or state; peak
+# ([[astronomy]])
+#* The [[point]] in the [[celestial sphere]] opposite the [[nadir]].
+#* The point in the sky [[vertically]] above a given position or observer.
+#* The highest point in the sky reached by a [[celestial]] body.
+# Highest point or [[state]]; [[peak]].
 
 ===Synonyms===
 *[[culmination]]
@@ -29,6 +32,7 @@ From Arabic ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' i
 *Spanish: [[cenit]] ''m''
 {{bottom}}
 
+[[Category:English nouns]]
 [[it:zenith]]
 [[ja:zenith]]
 [[pl:zenith]]
