--- a/en/倦/倦.11036.wikitext
+++ b/en/倦/倦.11036.wikitext
@@ -14,7 +14,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +26,19 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': gyun6
 
-* '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けん]] (ken)
 ** '''[[Kun]]''': [[つかれる]] (tsukareru), [[うむ]] (umu)
 
-* '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
 * '''Pronunciation''': 권
 
@@ -65,3 +63,5 @@
 * '''Big5''':
 ** Hex: ADC2
 ** Decimal: 44482
+
+[[Category:Japanese kanji]]
