--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -33,7 +33,7 @@
 *Polish: [[masło]] ''n''
 *Portuguese: [[manteiga]] ''f''
 *Romanian: [[Unt]] ''n''
-*Russian: [[сливoчнoe масло]] (slivočnoe maslo) ''n''
+*Russian: [[сливочное масло]] (slívočnoe máslo) ''n''
 *Slovak: [[maslo]]  ''n''
 *Slovene: [[maslo]] ''n'', [[puter]] ''m'' (colloquial)
 *Spanish: [[mantequilla]] ''f''
