--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -11,8 +11,8 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#bright, light, brilliant
-*# clear
+*# [[bright]], [[light]], [[brilliant]]
+*# [[clear]]
 
 
 ----
@@ -66,14 +66,14 @@
 
 ===Phrases===
 *[[明抢臆躲，暗箭难防]]
- 
+
 ----
 
 == Japanese ==
 ===Kanji===
-{{kanji|[[めい]] ([[mei]]), [[みょう]] ([[myō]])| [[あかるい]] ([[明るい]], [[akarui]]), [[あきらか]] ([[明らか]], [[akiraka]]), [[あける]] ([[明ける]], [[akeru]])}}
+{{kanji2|メイ (mei), ミョウ (myō)| [[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
 
-====Compounds====
+===Compounds===
 *[[明星]]
 *[[明朝]]
 *[[明王]]
@@ -106,7 +106,14 @@
 * '''Romanizations'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': myeong
 ** '''[[McCune-Reischauer]]''': myŏng
-** '''[[Yale]]''': meyng
+** '''[[Yale]]''': myeng
+
+----
+
+==Vietnamese==
+
+* minh
+
 ----
 
 == Dictionary Information ==
