--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -71,7 +71,7 @@
 
 == Japanese ==
 ===Kanji===
-{{kanji2|メイ (mei), ミョウ (myō)| [[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
+{{kanji|めい ([[mei]]), みょう ([[myō]])| [[あかるい]] ([[明るい]], [[akarui]]), [[あきらか]] ([[明らか]], [[akiraka]]), [[あける]] ([[明ける]], [[akeru]])}}
 
 ===Compounds===
 *[[明星]]
