--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -26,11 +26,8 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 ====Translations====
 
 '''place at which ships dock'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to M go here-->
+{{top}}
+<!--languages from A to I go here-->
 *Dutch: [[haven#Dutch|haven]] ''f''
 *Estonian: [[sadam]]
 *Finnish: [[satama]]
@@ -39,108 +36,69 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 *Greek: [[λιμένας]] {{m}}, [[λιμάνι]] {{n}}
 *[[Ido]]: [[portuo]]
 *Italian: [[porto]] {{m}}
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from N to Z go here-->
+{{mid}}
+<!--languages from J to Z go here-->
 *Portuguese: porto {{m}}
 *Spanish: [[puerto]] {{m}}
-|}
-|}
+{{bottom}}
 
 '''town or city containing such a place'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to M go here-->
+{{top}}
+<!--languages from A to I go here-->
 *Finnish: [[satama]], [[satamakaupunki]]
 *French: port {{m}}
 *German: [[Hafenstadt]] ''f''
 *Greek: [[πόρτο]]<!-- seen with ''f'' and ''n'' articles -->
 *[[Ido]]: [[portuo]]
 *Italian: [[città portuale]] ''f''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from N to Z go here-->
+{{mid}}
+<!--languages from N to J go here-->
 *Spanish: [[puerto]] {{m}}
-|}
-|}
+{{bottom}}
 
 '''type of fortified wine'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to M go here-->
+{{top}}
+<!--languages from A to I go here-->
 *Finnish: [[portviini]]
 *French: [[vin de Porto]] {{m}}
 *German: [[Portwein]] {{m}}
 *Greek: [[πορτό]] ''n'', [[οίνος Πορτογαλίας]] {{m}}
 *Italian: [[porto]] {{m}}
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from N to Z go here-->
+{{mid}}
+<!--languages from J to Z go here-->
 *Portuguese: [[vinho do Porto]] {{m}}
 *Spanish: [[vino de Oporto]] {{m}}
-|}
-|}
+{{bottom}}
 
-'''schoolbag'''<br>
+'''schoolbag'''<br/>
 ''See [[schoolbag]]''
 
 '''computing: logical or physical construct in and from which data are transferred'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to M go here-->
+{{top}}
+<!--languages from A to I go here-->
 *Finnish: [[portti]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from N to Z go here-->
-|}
-|}
+{{mid}}
+<!--languages from J to Z go here-->
+{{bottom}}
 
 '''computing: act of adapting a program so that it works on a different platform'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to M go here-->
+{{top}}
+<!--languages from A to I go here-->
 *Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] (''informal''), [[porttaus]] (''informal'')
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from N to Z go here-->
-|}
-|}
+{{mid}}
+<!--languages from J to Z go here-->
+{{bottom}}
 
 '''entryway, portal'''<br>
 ''See [[portal]]''
 
 '''opening where a connection is made'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to M go here-->
+{{top}}
+<!--languages from A to I go here-->
 *Finnish: [[liitin]], [[portti]] (''computers'')
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from N to Z go here-->
-|}
-|}
+{{mid}}
+<!--languages from J to Z go here-->
+{{bottom}}
 
 '''porthole'''<br>
 ''See [[porthole]]''
@@ -246,7 +204,12 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 #[[stature]], way of carrying oneself
 
 ----
+==Norwegian==
+===Noun===
+{{no-noun-m1|port}}
+#[[gate]]
 
+----
 ==Swedish==
 ===Noun===
 '''port''' ''c'' ([[porten]], [[portar]], [[portarna]])
