--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -7,7 +7,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 
 === Adjective ===
 '''beautiful'''
-#possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
+#Kristina Mlinaric
 #''(of the weather):'' pleasant; clear.
 
 ====Translations====
