--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -32,6 +32,7 @@
 # ''[[slang]]'': conventional.
 # ''[[slang]]'': heterosexual.
 # ''[[slang]]'': boring, unappealing, bad or of low quality.
+#{{cricket}} on, or near a line running between the two [[wicket]]s
 
 ==== Usage Notes ====
 
