/* English */ <New Zealand#753528>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -13,29 +13,30 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 #A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''NZ'''.
 #The islands of New Zealand, especially the North Island, South Island and nearby coastal islands.
 #The Realm of New Zealand, including the Cook Islands, Niue, Tokelau and the Ross Dependency.
-#The New Zealand Government or the Parliament of New Zealand
+#The New Zealand Government or the Parliament of New Zealand.
 
 ====Translations====
 {{top}}
+*Arabic: {{ARchar|[[نيوزيلاندا]]}} (niuzilánda) {{f}}
 *Bosnian: [[Novi Zeland#Bosnian|Novi Zeland]] {{m}}
 *[[Breton]]: [[Zeland-Nevez]]
 *Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
 *Chinese: [[新西蘭]]/[[新西兰]], [[紐西蘭]] (Xīn Xīlán)
-*Croatian: Novi Zeland {{m}}
-*Czech: [[Nový Zéland]]
+*Croatian: [[Novi Zeland#Croatian|Novi Zeland]] {{m}}
+*Czech: [[Nový Zéland]] {{m}}
 *Danish: New Zealand
 *Dutch: [[Nieuw-Zeeland]]
-*[[Esperanto]]: [[Nov-Zelando]]
+*Esperanto: [[Nov-Zelando]]
 *Estonian: [[Uus-Meremaa]]
 *Finnish: [[Uusi-Seelanti]]
 *French: [[Nouvelle-Zélande]] {{f}}
 *German: [[Neuseeland]] {{n}}
 *Greek: [[Νέα Ζηλανδία]] (Néa Zilandía) {{f}}
 *Hungarian: [[Új-Zéland]]
-*[[Indonesian]]: [[Selandia Baru]]
+*Indonesian: [[Selandia Baru]]
+{{mid}}
 *[[Interlingua]]: [[Nove Zelanda]]
 *Italian: [[Nuova Zelanda]] {{f}}
-{{mid}}
 *Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
 *Latin: [[Nova Zelanda]] {{f}}
 *[[Maori]]: [[Aotearoa]], [[Niu Tireni]]
@@ -46,7 +47,7 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *Russian: [[Новая Зеландия]] (Nóvaja Zelándija) {{f}}
 *Serbian:
 *:Cyrillic: [[Нови Зеланд#Serbian|Нови Зеланд]] {{m}}
-*:Latin: [[Novi Zeland#Serbian|Novi Zeland]] {{m}}
+*:Roman: [[Novi Zeland#Serbian|Novi Zeland]] {{m}}
 *Slovene: [[Nova Zelandija]] {{f}}
 *Spanish: [[Nueva Zelanda]] {{f}}
 *Swedish: [[Nya Zeeland]]
@@ -63,7 +64,10 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[Aotearoa New Zealand]]
 *[[Countries of the world]]
 
-[[Category:English country nouns]]
+[[Category:Countries]]
+
+
+----
 
 ==Norwegian==
 ===Proper noun===
