--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -43,9 +43,9 @@ Old English [[cuman]].
 *Ido: [[venar]]
 *Indonesian: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
 *Irish: [[tar#Irish|tar]]
-{{mid}}
 *Italian: [[venire]]
 *Japanese: [[来る]] (くる, kúru)
+{{mid}}
 *Korean: [[오다]] (oda)
 *Kurdish: [[hatin]]
 *Latin: [[venire]]
@@ -56,6 +56,7 @@ Old English [[cuman]].
 *Portuguese: [[vir]]
 *[[Rohingya]]: [[ai]]
 *Russian: [[приходить]] / [[прийти]] (prikhodít’, prijtí)
+*Slovene: [[priti]]
 *Spanish: [[venir]]
 *Swedish: [[komma]]
 *Turkish: [[gelmek]]
