--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -55,7 +55,7 @@
 *Portuguese: [[falar]]
 *Russian: [[говорить]] /govorit'/
 *Slovak: [[rozprávať]], [[hovoriť]]
-*Slovenian: [[govoriti]]
+*Slovene: [[govoriti]] (1, 2, 3, 4, 6)
 *Spanish: [[hablar]]
 *[[Thai]]: poot
 *[[Tupinambá]]: [[nhe'eng]]
