--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,66 +1,70 @@
 {{wikipedia}}
 ==English==
 ===Pronuciation===
-*{{audio|en-us-butter.ogg|Audio (US)}}
+*IPA: /ˈbʌ.tɝ/
+*:{{audio|en-us-butter.ogg|Audio (US)}}
 
 ===Noun===
-'''butter'''
-
+'''but•ter'''
 # {{uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow milk).
 
 ====Translations====
 '''soft spread'''
 {{top}}
-*Bavarian: [[Budda]] ''m''
-*Breton: [[amanenn]] ''m''
-*Bulgarian: [[масло]] ''n''
-*Catalan: [[mantega]] ''f''
-*Chinese: [[黄油]] (huángyóu); [[niu2you2]]
-*Czech: [[máslo]]  ''n''
-*Danish: [[smør]]
-*Dutch: [[boter]] ''f''
-*[[Finnish]]: [[voi]]
-*French: [[beurre]] ''m''
-*German: Butter ''f''
-*Greek: [[βούτυρο]]
-*Hungarian: [[vaj]]
-*Interlingua: [[butyro]]
-*Italian: [[burro]] ''m''
+*Bavarian: [[Budda]] {{m}}
+*{{br}}: [[amanenn]] {{m}}
+*{{bg}}: [[масло]] (maslo) {{n}}
+*{{ca}}: [[mantega]] {{f}}
+*{{zh}}: [[黄油]] (huáng.yóu); [[niu2you2]]
+*{{cs}}: [[máslo]]  {{n}}
+*{{da}}: [[smør]]
+*{{nl}}: [[boter]] {{f}}
+*{{fi}}: [[voi]]
+*{{fr}}: [[beurre]] {{m}}
+*{{de}}: Butter {{f}}
+*{{el}}: [[βούτυρο]] (boútyro)
+*{{hu}}: [[vaj]]
+*{{ia}}: [[butyro]]
+*{{it}}: [[burro]] {{m}}
 {{mid}}
-*Japanese: [[バター]] (batā)
-*Lithuanian: [[sviestas]] ''m''
-*Mongolian: [[цөцгийн тос]] (ts&ouml;tsgiin tos)
-*Polish: [[masło]] ''n''
-*Portuguese: [[manteiga]] ''f''
-*Romanian: [[Unt]] ''n''
-*Russian: [[сливочное масло]] (slívočnoe máslo) ''n''
-*Slovak: [[maslo]]  ''n''
-*Slovene: [[maslo]] ''n'', [[puter]] ''m'' (colloquial)
-*Spanish: [[mantequilla]] ''f''
-*Swedish: [[smör]] ''n''
+*{{ja}}: [[バター]] (batā)
+*{{lt}}: [[sviestas]] {{m}}
+*{{mn}}: [[цөцгийн тос]] (cöcgiĭn tos)
+*{{pl}}: [[masło]] {{n}}
+*{{pt}}: [[manteiga]] {{f}}
+*{{ro}}: [[unt]] {{n}}
+*{{ru}}: [[сливочное масло]] (slívočnoě máslo) {{n}}
+*{{sk}}: [[maslo]] {{n}}
+*[[Slovenian]]: [[maslo]] {{n}}, [[puter]] {{m}} (''colloq.'')
+*{{es}}: [[mantequilla]] {{f}}
+*{{sv}}: [[smör]] {{n}}
+*{{th}}: [[เนย]]
 *{{vi}}: [[bơ]]
 {{bottom}}
 
 ===Transitive verb===
 '''to butter'''
-
 # To [[spread]] butter on.
 #: ''Butter the toast.''
+# To flatter somebody with words, usu. for the purpose of some favour, etc. (''see also'' [[butter up]])
 
 ====Translations====
-
-*Czech: [[mazat]] [[máslo|máslem]] (''imperf. aspect''), [[namazat]] [[máslo|máslem]], [[pomazat]] [[máslo|máslem]] (''perf. aspect'')
-*Danish: [[smøre]] brødet
+'''to apply butter (to)'''
+*{{cs}}: [[mazat]] [[máslo|máslem]] (''imperf. aspect''), [[namazat]] [[máslo|máslem]], [[pomazat]] [[máslo|máslem]] (''perf. aspect'')
+*{{da}}: [[smøre]] brødet
+*{{nl}}: [[beboteren]]; [[inboteren]]; met boter [[besmeren]]
+*{{de}}: [[mit]] Butter [[bestreichen]]
+*{{ia}}: [[butyrar]]
+*{{pt}}: [[amanteigar]]; [[passar]] [[manteiga]] [[em]]
+*[[Slovenian]]: [[namazati z maslom]]
 *{{vi}}: [[quẹt]] bơ (vào)
-
-=====Translations to be categorized=====
-{{checktrans}}
-*Bulgarian: [[лаская]] (2)
-*Dutch: [[beboteren]] (1), [[inboteren]] (1), met boter [[besmeren]] (1), [[vleien]] (2)
-*German: [[mit]] Butter [[bestreichen]] (1), [[Honig]] um den [[Bart]] [[schmieren]] (2)
-*[[Interlingua]]: [[butyrar]] (1); [[adular]] (2)
-*Portuguese: [[amanteigar]], [[passar]] [[manteiga]] [[em]] (1); [[adular]], [[bajular]] (2)
-*Slovene: [[namazati z maslom]]
+<br><br>
+'''to flatter'''<br>
+*{{bg}}: [[лаская]] (laskaǎ)
+*{{nl}}: [[vleien]]
+*{{de}}: [[Honig]] um den [[Bart]] [[schmieren]]
+*{{ia}}: [[adular]]
+*{{pt}}: [[bajular]]
 
 ===Derived terms===
 {| border=0  width=100%
