--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -10,7 +10,7 @@
 
 Note about [[grammatical gender in Dutch]]: all [[diminutive|diminutives]] are automatically neuter; however, sex takes precedence in all the pronouns. Compare ''het kopje en zijn schotel'' (the (little) cup and '''its''' saucer) with ''het meisje en haar hoed'' (the (little) girl and '''her''' hat).
 
-In many cases the possessive pronoun ''zijn'' is avoided when refering to neuter nouns, instead the [[pronominal adverb]] [[ervan]] is used: ''de schotel ervan''.
+In many cases the possessive pronoun ''zijn'' is avoided when refering to inanimate neuter nouns, instead the [[pronominal adverb]] ''[[ervan]]'' is used: ''de schotel ervan''.
 
 ==== Translations ====
 *English: [[the]]
