--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -31,8 +31,9 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *Croatian: [[šljiva#Croatian|šljiva]] {{f}}
 *Dutch: [[pruimenboom]]
 *Finnish: [[luumupuu]]
-*Italian: [[prugno]] {{m}}
+*Greek: [[δαμασκηνιά]] [ðaˌmasciˈɲa] {{f}}
 {{mid}}
+*Italian: [[prugno]] {{m}}
 *Japanese: [[セイヨウスモモ]] (seiyō sumomo)
 *Serbian:
 *:Cyrillic: [[шљива#Serbian|шљива]] {{f}}
@@ -50,9 +51,10 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *[[Esperanto]]: [[pruno]]
 *Finnish: [[luumu]]
 *French: [[prune]] {{f}}
-*[[Hindi]]: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
-*Italian: [[prugna]] {{f}}
+*Greek: [[δαμάσκηνο]] [ðaˈmasciˌno̞] {{n}}
+*Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 {{mid}}
+*Italian: [[prugna]] {{f}}
 *Japanese: [[セイヨウスモモ]] (seiyōsumomo), [[プラム]] (puramu)
 *Serbian:
 *:Cyrillic: [[шљива#Serbian|шљива]] {{f}}
@@ -66,6 +68,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 '''colour'''
 {{top}}
 *Dutch: [[donkerrood]] {{n}}
+*Greek: [[βαθυκόκκινο]] [vaθiˈko̞ciˌno̞] {{n}}
 {{mid}}
 *Japanese: [[暗紫色]] (あんししょく, anshishoku)
 {{bottom}}
