--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -32,8 +32,8 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *Dutch: [[pruimenboom]]
 *Finnish: [[luumupuu]]
 *Greek: [[δαμασκηνιά]] [ðaˌmasciˈɲa] {{f}}
-{{mid}}
 *Italian: [[prugno]] {{m}}
+{{mid}}
 *Japanese: [[セイヨウスモモ]] (seiyō sumomo)
 *Serbian:
 *:Cyrillic: [[шљива#Serbian|шљива]] {{f}}
@@ -48,7 +48,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *Catalan: [[pruna]] {{f}}
 *Croatian: [[šljiva#Croatian|šljiva]] {{f}}
 *Dutch: [[pruim]]
-*[[Esperanto]]: [[pruno]]
+*Esperanto: [[pruno]]
 *Finnish: [[luumu]]
 *French: [[prune]] {{f}}
 *Greek: [[δαμάσκηνο]] [ðaˈmasciˌno̞] {{n}}
