/* Verb */ guwal and dalnguy from aus. <cut#762732>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -27,6 +27,13 @@
 *[[cutting edge]]
 *[[cutting remark]]
 
+====Related terms====
+*[[cut for one’s size]]
+*[[cut down]]
+*[[cut off]]
+*[[cut out]]
+*[[cut up]]
+
 ====Translations====
 {{top}}
 *Bulgarian: [[сека]]
@@ -42,22 +49,17 @@
 ** 11: [[skære]], [[krydse]] (''Geometry'')
 ** 13: [[afbryde]].
 {{mid}}
-*Esperanto: [[tondi]]
+*[[Esperanto]]: [[tondi]]
 *Finnish: [[leikata]] (1), [[eristää]] (2), [[poistaa]] (2)
 *French: [[couper]]
+*[[Guwal]]: [[nudin]], [[gunban]], [[banyin]]
 *Hungarian: [[vág]]
 *Indonesian: [[potong]], [[kerat]], [[iris]]
 *Italian: [[tagliare]]
+*[[Jalnguy]]: [[jalnggan]], [[bubaman]]
 *Japanese: [[切る]] ([[きる]], kiru)
 *Swedish: [[skära]] (1), [[klippa]] (1)
 {{bottom}}
-
-====Related terms====
-*[[cut for one’s size]]
-*[[cut down]]
-*[[cut off]]
-*[[cut out]]
-*[[cut up]]
 
 ===Noun===
 {{sb|cut|cuts}}
