--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -18,9 +18,11 @@
 *German: [[Vorhang]] {{m}}
 *Indonesian: [[serambi]], [[korden]], [[layar]]
 *Japanese: [[カーテン]] (kāten)
+*{{ku}}: [[perde]] {{f}}
 *Slovak: [[opona]] {{f}}
 *Slovene: [[zavesa]] {{f}}
 *Spanish: [[cortina]] {{f}}
+*{{tr}}: [[perde]]
 
 ===See also===
 *[[blind]]
