--- a/en/圶/圶.12984.wikitext
+++ b/en/圶/圶.12984.wikitext
@@ -1,1 +1,45 @@
-e
+* '''[[Wiktionary:Chinese radical index| Radical]] Number 32''': [[Wiktionary:Chinese radical index 土|土]]+3 strokes
+
+* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 6|6]]
+
+* '''Stroke order''': 
+
+* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
+
+* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 大土 (KG)
+
+* '''Graphical Significance and Origin''': 
+
+* '''Common Meaning'''
+
+----
+
+== [[Chinese]] [[Hanzi]] ==
+
+* '''Romanizations'''
+** '''[[Mandarin]]'''
+*** '''[[Pinyin]]''': qià (qia4)
+*** '''[[Wade-Giles]]''': ch'ia<sup>4</sup>
+*** '''[[Yale]]''': 
+** '''[[Cantonese]]'''
+*** '''[[Jyutping]]''':
+*** '''[[Penkyamp]]''': 
+*** '''[[Yale]]''': 
+
+* '''Other info''': 
+
+----
+
+== Dictionary Information ==
+
+* KangXi: 0224.180
+* Morobashi: 04897
+* Hanyu Da Zidian: 10419.020
+
+== Technical Information ==
+
+* '''Unicode''':
+** Hex: 5736
+** Decimal: 22326
+
+[[fr:圶]]
