robot  Adding: fr <zenith#790594>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -34,6 +34,8 @@ From Arabic ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' i
 {{bottom}}
 
 [[Category:English nouns]]
+
+[[fr:zenith]]
 [[it:zenith]]
 [[ja:zenith]]
 [[pl:zenith]]
