--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -30,8 +30,8 @@
 
 ===Verb===
 '''to found'''  ([[founds]], [[founded]], [[founding]])
-# to [[begin]] [[building]]
-# to start a new [[company]]
+# to [[begin]] [[building]].
+# to start some type of [[organization]] or [[company]].
 
 ====Translations====
 *[[French]]: [[fonder]]
