--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -38,14 +38,13 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[い]] (i)
 ** '''[[Kun]]''': [[えらい]] (erai)
 
-* '''Other info''':  
-
+[[Category:Japanese kanji]]
 ----
 
 == [[Korean]] [[Hanja]] ==
