--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -16,13 +16,17 @@ Abbreviation of Latin ''[[exempli grati&#257;]]'' ("for example"). ''Grati&#257;
 *Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
 
 ====Translations====
+{{top}}
 *Dutch: [[bv.]], [[bijv.]], [[bvb.]] (''[[bijvoorbeeld]]'')
 *Finnish: [[esim.]] (''[[esimerkiksi]]'')
 *French: [[par ex.]], [[p. ex.]] (''[[par exemple]]'')<!-- are both right? -->
 *German: [[z.B.]] (''[[zum Beispiel]]'')
+{{mid}}
 *Italian: [[ad es.]] (''[[ad esempio]]'')
 *Russian: [[напр.]]
+*Spanish: [[por ejemplo]]
 *Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] (''[[till exempel]]''), [[exempelvis]]
+{{bottom}}
 
 [[fr:e.g.]]
 [[pt:E.g.]]
