--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -57,5 +57,5 @@ Often abbreviated "etc." or "&c". [[Ampersand]] ("[[&]]") comes from the Latin w
 *[[&]]
 *[[cetera]]
 *[[et]]
-
+[[da:Et cetera]]
 [[fr:et cetera]]
