--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -12,22 +12,26 @@ From [[Serbo-Croatian]] [[jug|jugo]] (''south'') and '''slavija''' (''slavia'', 
 
 ===Translations===
 {{top}}
+*Arabic: {{ARchar|[[يوغوسلافيا]]}} (yuğuslá:fiya) {{f}}
 *Bosnian: [[Jugoslavija#Bosnian|Jugoslavija]] {{f}}
-*Chinese: [[南斯拉夫]]
+*Chinese: [[南斯拉夫]] (Nánsīlāfū)
 *Croatian: [[Jugoslavija#Croatian|Jugoslavija]] {{f}}
 *[[Esperanto]]: [[Jugoslavio]]
 *Dutch: [[Joegoslavië]]
 *Finnish: [[Jugoslavia]]
 *French: [[Yougoslavie]] {{f}}
 *German: [[Jugoslavien]] {{n}}
+*Hungarian: [[Jugoszlávia]]
 *Italian: [[Jugoslavia]], [[Iugoslavia]] {{f}}
-{{mid}}
 *Japanese: [[ユーゴスラヴィア]] (Yūgosuravia)
+*Korean: [[유고슬라비아]] (Yugoseullabia)
+{{mid}}
 *Polish: [[Jugosławia]] {{f}}
+*Portuguese: [[Jugoslávia]] ''(Portugual)'' {{f}}, [[Iogoslávia]] ''(Brazil)'' {{f}}
 *Russian: [[Югославия]] (Jugoslávija) {{f}}
 *Serbian:
 *:Cyrillic: [[Југославија#Serbian|Југославија]] {{f}}
-*:Latin: [[Jugoslavija#Serbian|Jugoslavija]] {{f}}
+*:Roman: [[Jugoslavija#Serbian|Jugoslavija]] {{f}}
 *Slovene: [[Jugoslavija#Slovene|Jugoslavija]] {{f}}
 *Spanish: Yugoslavia, [[Yugoeslavia]] {{f}}
 *Swedish: [[Jugoslavien]]
