--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -14,8 +14,9 @@
 ====Translations====
 '''fair skinned/haired person'''
 {{top}}
-*Swedish: [[blondin]] 
+* {{io}}: [[blonda]]
 {{mid}}
+*Swedish: [[blondin]]
 {{bottom}}
 
 ===Adjective===
