--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -5,7 +5,7 @@
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
 # (''colloquial'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.
 # (''colloquial'') With ''at'', indicates a particular area of deficiency.
-#: ''You're great at baseball, but you suck at golf.''
+#: ''Joe's great at Pokemon, but he sucks at chess.''
 
 ====Synonyms====
 #(2, 3 above) To [[blow]]
