--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -222,12 +222,12 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 *[[portvakt]]
 *[[portkod]]
 *[[porta]]
-
 [[et:Port]]
+[[el:Port]]
 [[fr:port]]
 [[gl:Port]]
 [[io:Port]]
 [[it:port]]
-[[ja:port]]
 [[nl:port]]
+[[ja:port]]
 [[pl:port]]
