--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -58,6 +58,6 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *[[substantive]]
 *[[understand]]
 [[Category:1000 English basic words]]
-
 [[io:Substance]]
 [[it:substance]]
+[[fi:substance]]
