robot  Adding: bg, fr, ja, zh Removing: ru <Germany#804385>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -87,15 +87,17 @@
 
 [[Category:Countries]]
 [[Category:Exonyms]]
-
+[[bg:Germany]]
 [[de:Germany]]
 [[et:Germany]]
+[[fr:Germany]]
 [[hi:Germany]]
 [[io:Germany]]
 [[it:Germany]]
 [[hu:Germany]]
+[[ja:Germany]]
 [[pl:Germany]]
 [[ro:Germany]]
-[[ru:Категория:Эмиграция в Германию]]
 [[fi:Germany]]
 [[sv:Germany]]
+[[zh:Germany]]
