/* Translations */ +sv <suck#806262>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -27,6 +27,7 @@
 *Portuguese: [[chupar]], [[sugar]]
 *Russian: [[сосать]], [[всасывать]]
 *Spanish: [[chupar]]
+*Swedish: [[suga]]
 {{bottom}}
 
 '''colloquial: term of general disparagement'''
@@ -38,6 +39,7 @@
 *Italian: [[fare schifo]]
 *Portuguese: [[saco]] (vulgar)
 *Russian: [[сосать]] (vulgar), [[отстой]] (noun)
+*Swedish: [[suga]]
 {{bottom}}
 
 '''colloquial: with at, indicates a particular area of deficiency'''
@@ -46,6 +48,7 @@
 *Hindi: [[Bakwaas]]
 {{mid}}
 *Italian: [[fare schifo a]]
+*Swedish: [[suga]]
 {{bottom}}
 
 =====Translations to be checked=====
