--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -7,8 +7,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 
 === Adjective ===
 '''beautiful'''
-#of or pertaining to Ashton.
-[[Image:http://xb9.xanga.com/e19b1b573423134946401/w24147134.jpg]]
+#of or pertaining to Ashton Justine of Aiken, SC.
 #possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
 #''(of the weather):'' pleasant; clear.
 
@@ -62,6 +61,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *[[nice looking]]
 *[[pretty]]
 *[[shapely]]
+*[[perfect]]
 
 ====Antonyms====
 
@@ -75,6 +75,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 ====See also====
 *[[beautifully]]
 *[[beautifulness]]
+*[[Ashton Justine]]
 
 ===Interjection===
 Term meaning "What a mess!" or "What a screw-up!"
