--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -1,20 +1,19 @@
-== English ==
+==English==
 
-=== Etymology ===
+===Etymology===
 
 : from Middle English ''streght'' (Anglo Saxon ''streht''), the past participle of Middle English ''strechen'' (Anglo-Saxon ''streccan''), to stretch.
 
-=== Pronunciation ===
+===Pronunciation===
 
 * /<tt>streIt</tt>/
 
-=== Homophones ===
+===Homophones===
 
 * [[strait]]
 [[Category:English homophones]]
 
-=== Adjective ===
-
+===Adjective===
 '''straight''' ([[straighter]], [[straightest]])
 
 # not crooked or bent; having a constant direction throughout its length.
@@ -34,53 +33,51 @@
 # ''[[slang]]'': boring, unappealing, bad or of low quality.
 #{{cricket}} on, or near a line running between the two [[wicket]]s
 
-==== Usage Notes ====
+====Usage Notes====
 
 * Straight is sometimes humorously used as meaning low quality by homosexuals and bisexuals, rather than [[gay]].
 
-==== Translations ====
+====Translations====
 
 {{top}}
 * Chinese: [[直]]的, [[笔直的]]
-* [[{{nl}}]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
-* [[{{fr}}]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
+* [[Dutch]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
+* [[French]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
 * German: [[gerade]] (1), [[hetero]] (8)
 * Hungarian: [[egyenes]] (1,3), [[őszinte]] (3), [[heteró]] (8)
-* {{is}}: [[beinn]] (1)
+* [[w:Icelandic language|Icelandic]]: [[beinn]] (1)
 {{mid}}
 * Irish: [[díreach]] (1), (8)
 * Italian: [[dritto]], [[liscio]], [[subito]], [[eterosessuale]] (8)
-* [[{{pt}}]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
-* [[{{sv}}]]: [[rak]] (1,3,6)
+* [[Portuguese]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
+* [[Swedish]]: [[rak]] (1,3,6)
 * [[Welsh]]: [[uniawn]]
 {{bottom}}
 
-=== Adverb ===
-
+===Adverb===
 '''straight'''
 
 # in a forward direction.
 #: ''straight ahead''
 
-==== Translations ====
+====Translations====
 
 {{top}}
 * Chinese: [[直]], [[直接地]]
 * [[Dutch]]: [[rechtdoor]]
 * [[French]]: [[tout droit]]
 {{mid}}
-* {{de}}: [[geradeaus]]
+* German: [[geradeaus]]
 * [[Swedish]]: [[rakt fram]]
 {{bottom}}
 
-=== Noun ===
-
+===Noun===
 '''straight'''
 
 # a part of a racecourse or running track that is not curved.
 # in poker, five cards in sequence.
 
-==== Translations ====
+====Translations====
 
 {{top}}
 * [[Dutch]]: [[straat]]
