robot  Adding: fr, io <Yugoslavia#810953>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -45,8 +45,9 @@ From [[Serbo-Croatian]] [[jug|jugo]] (''south'') and '''slavija''' (''slavia'', 
 
 [[Category:Countries]]
 [[Category:Serbo-Croatian derivations]]
-
 [[et:Yugoslavia]]
 [[es:Yugoslavia]]
+[[fr:Yugoslavia]]
+[[io:Yugoslavia]]
 [[pl:Yugoslavia]]
 [[fi:Yugoslavia]]
