--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -142,6 +142,12 @@
 
 ----
 
+== Vietnamese [[Sino-Vietnamese]] ==
+
+*'''Romanized Vietnamese reading''': Xuân 
+
+----
+
 == Dictionary Information ==
 
 * KangXi: 0493.060
