--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -113,23 +113,23 @@
 
 ===Compounds===
 
-*[[小春]] (こはる, koharu) ''early autumn'', ''Indian summer''
-*[[小春日和]] (こはるびより, koharubiyori) ''early autumn'', ''Indian summer''
-*[[常春]] (とこはる, tokoharu)  ''everlasting spring''
-*[[初春]] (しょしゅん, shoshun)  ''early spring'', ''New Year''
-*[[春秋]] (しゅんじゅう, shunshū)  ''spring and autumn'', ''months and years'', ''Chronicles of Lu''
-*[[春秋戦国]] (しゅんじゅうせんごく, shunjuusengoku)  ''Spring and Autumn Period and Warring States Period''
-*[[春一番]] (はるいちばん, haruichiban)  ''first storm of spring''
-*[[春風]] (はるかぜ, harukaze)  ''spring breeze''
-*[[春霞]] (はるがすみ, harugasumi)  ''springtime haze''
-*[[春着]] (はるぎ, harugi)  ''springwear'', ''New Year's clothes''
-*[[春蚕]] (はるご, harugo)  ''spring breed of silkworms''
-*[[春先]] (はるさき, harusaki)  ''beginning of spring''
-*[[春雨]] (はるさめ, harusame)  ''spring rain'', ''Japanese vermicelli''
-*[[春場所]] (はるばしょ, harubasho)  ''the spring sumo tournament in Osaka''
-*[[春繭]] (はるまゆ, harumayu)  ''the spring cocoon crop''
-*[[春休み]] (はるやすみ, haruyasumi)  ''spring break''
-*[[来春]] (らいしゅん, raishun)  ''next spring''
+*[[小春]] (こはる: koharu) ''early autumn'', ''Indian summer''
+*[[小春日和]] (こはるびより: koharubiyori) ''early autumn'', ''Indian summer''
+*[[常春]] (とこはる: tokoharu)  ''everlasting spring''
+*[[初春]] (はつはる, しょしゅん: shoshun)  ''early spring'', ''New Year''
+*[[春秋]] (しゅんじゅう: shunshū)  ''spring and autumn'', ''months and years'', ''Chronicles of Lu''
+*[[春秋戦国]] (しゅんじゅうせんごく: shunjuusengoku)  ''Spring and Autumn Period and Warring States Period''
+*[[春一番]] (はるいちばん: haruichiban)  ''first storm of spring''
+*[[春風]] (はるかぜ: harukaze)  ''spring breeze''
+*[[春霞]] (はるがすみ: harugasumi)  ''springtime haze''
+*[[春着]] (はるぎ: harugi)  ''springwear'', ''New Year's clothes''
+*[[春蚕]] (はるご: harugo)  ''spring breed of silkworms''
+*[[春先]] (はるさき: harusaki)  ''beginning of spring''
+*[[春雨]] (はるさめ: harusame)  ''spring rain'', ''Japanese vermicelli''
+*[[春場所]] (はるばしょ: harubasho)  ''the spring sumo tournament in Osaka''
+*[[春繭]] (はるまゆ: harumayu)  ''the spring cocoon crop''
+*[[春休み]] (はるやすみ: haruyasumi)  ''spring break''
+*[[来春]] (らいしゅん: raishun)  ''next spring''
 
 [[Category:Japanese kanji]]
 [[Category:Japanese language|はる]]
