--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -32,10 +32,11 @@
 *'''Portuguese''': [[tijolo]]
 *'''Romanian''':[[cărămidă]] ''f''
 *'''Russian''': [[кирпич]] (kirpich)
+*'''Slovene''': [[opeka]] ''f'' (1,2)
 *'''Spanish''': [[ladrillo]]
-*Swahili: [[tofali]], [[matofali]] ''pl'' (1,2) ''(noun 5/6)''
-*{{uk}}: [[цеглина]] (cehl'''y'''na) {{f}} (1), [[цегла]] (c'''e'''hla) {{f}} (2)
-*{{vi}}: [[gạch]]
+*'''Swahili''': [[tofali]], [[matofali]] ''pl'' (1,2) ''(noun 5/6)''
+*'''{{uk}}''': [[цеглина]] (cehl'''y'''na) {{f}} (1), [[цегла]] (c'''e'''hla) {{f}} (2)
+*'''{{vi}}''': [[gạch]]
 {{bottom}}
 
 ===Adjective===
