--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Pronunciation===
 *brĭk, /brɪk/, /<tt>brIk</tt>/
 *{{audio|en-us-brick.ogg|Audio (US)}}
@@ -35,8 +36,8 @@
 *'''Slovene''': [[opeka]] ''f'' (1,2)
 *'''Spanish''': [[ladrillo]]
 *'''Swahili''': [[tofali]], [[matofali]] ''pl'' (1,2) ''(noun 5/6)''
-*'''{{uk}}''': [[цеглина]] (cehl'''y'''na) {{f}} (1), [[цегла]] (c'''e'''hla) {{f}} (2)
-*'''{{vi}}''': [[gạch]]
+*'''Ukrainian''': [[цеглина]] (cehl'''y'''na) {{f}} (1), [[цегла]] (c'''e'''hla) {{f}} (2)
+*'''[[w:Vietnamese language|Vietnamese]]''': [[gạch]]
 {{bottom}}
 
 ===Adjective===
@@ -47,10 +48,10 @@
 
 ====Translations====
 *'''Russian''': [[кирпичный]] (kirpichniy)
-*{{uk}}: [[цегельний]] (ceh'''e'''l'nyj) {{m}}
-*{{vi}}: bằng gạch
+*Ukrainian: [[цегельний]] (ceh'''e'''l'nyj) {{m}}
+*[[w:Vietnamese language|Vietnamese]]: bằng gạch
 
-=== Derived terms ===
+===Derived terms===
 * [[bricks and mortar]]
 * [[bricker]]
 
