--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 
+{{top}}
 *[[Catalan]]: [[europeu]] ''m'' [[europea]] ''f''
 *Dutch: [[Europeaan]]
 *[[Esperanto]]: [[Eŭropano]]
@@ -17,12 +18,15 @@
 *Finnish: [[eurooppalainen]]
 *French: [[Européen]] ''m'', [[Européenne]] ''f''
 *[[Frisian]]: [[Europeaan]]
+{{mid}}
 *German: [[Europäer]] ''m'', [[Europäerin]] ''f''
 *[[Interlingua]]: [[europeo]]
 *Italian: [[europeo]] ''m'', [[europea]] ''f''
+*Polish: Europejczyk ''m'', Europjka ''f''
 *Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
 *Spanish: [[europeo]]
 *[[w:Swedish language|Swedish]]: [[europé]] ''c''
+{{bottom}}
 
 ===Adjective===
 '''European'''
