--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -100,9 +100,26 @@
 #[[appeal|Appeal]], [[attraction]] or [[pulling]] [[power]] (as of a movie star)
 
 ===Derived terms===
-*[[pull a|pull a...]]
+{{top}}
 *[[on the pull]]
+*[[pull a|pull a...]]
+*[[pull away]]
+*[[pull back]]
+*[[pull down]]
+*[[pulley]]
+*[[pull in]]
+{{mid}}
+*[[pulling]]
+*[[pull off]]
+*[[pull out]]
+*[[pull over]]
 *[[pullover]]
+*[[pull round]]
+*[[pull somebody's leg]]
+*[[pull through]]
+*[[pull up]]
+*[[pull-up]]
+{{bottom}}
 
 [[Category:1000 English basic words]]
 
