--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Etymology===
 From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from present participle ''[[substans]]'', from ''[[substare]]'', '''[[exist]]''', lit. '''stand under''', from ''[[stare]]'', '''[[stand]]'''
 
