dewikify common langs <speak#841104>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -57,7 +57,7 @@
 *Slovak: [[rozprávať]], [[hovoriť]]
 *Slovene: [[govoriti]] (1, 2, 3, 4, 6)
 *Spanish: [[hablar]]
-*[[Thai]]: poot
+*Thai: poot
 *[[Tupinambá]]: [[nhe'eng]]
 {{bottom}}
 
