--- a/en/c/crept.6842.wikitext
+++ b/en/c/crept.6842.wikitext
@@ -1,6 +1,9 @@
+==English==
+
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'krεpt/
+*{{audio|en-us-crept.ogg|Audio (US)}}
 
 === Verb ===
 
