dewikify common langs <count#842450>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -20,7 +20,7 @@
 *Portuguese: [[conde]] {{m}} (1)
 *Romanian: [[conte]] {{m}} (1), [[numărare]] {{f}} (2), [[numărătoare]] {{f}} (3)
 *Russian: [[граф]] (1), [[счёт]] (2), [[отсчёт]] (3)
-*[[Slovene]]: [[grof]] {{m}} (1), [[rezultat]] {{m}} (2), [[odštevanje]] {{n}} (3)
+*Slovene: [[grof]] {{m}} (1), [[rezultat]] {{m}} (2), [[odštevanje]] {{n}} (3)
 *Spanish: [[conde]] {{m}} (1)
 
 ===Verb===
