--- a/en/p/polyeidic.7206.wikitext
+++ b/en/p/polyeidic.7206.wikitext
@@ -1,4 +1,8 @@
+==English==
+
 ===Etymology===
-Poly- + Greek [[form]]
+[[poly-]] + Greek [[form]]
+
 ===Adjective===
-#''(Zoölogy):'' Passing through several distinct [[larval]] forms; -- having several distinct kinds of young.
+'''polyeidic'''
+#''(Zoölogy):'' Passing through several distinct [[larval]] forms; -- having several distinct kinds of [[young]].
