--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -5,7 +5,8 @@ Middle English
 
 ===Noun===
 {{en-noun-reg}}
-# Act of stabbing, blow or thrust with knife etc., wound thus made, blow or pain inflicted on person's feelings
+# 1. Act of stabbing, blow or thrust with an object. Object can be sharp, soft, hard, etc, etc
+2. wound thus made, blow or pain inflicted on person's feelings
 # [[attempt]], [[try]]
 #:''I'll give this thankless task a '''stab'''''
 
