--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -5,7 +5,7 @@
 Middle English
 
 ===Noun===
-{{sb|{{PAGENAME}}|{{PAGENAME}}s}}
+{{en-noun|stab|stabs}}
 
 # Act of stabbing or [[thrust|thrusting]] with an object.
 # Wound thus made.
@@ -36,20 +36,19 @@ Middle English
 * Russian: [[попытка]] {{f}}
 {{bottom}}
 
-===Transitive verb===
-{{regverb|'''to stab'''|'''stabs'''|'''stabbed'''|'''stabbing'''}}
+===Verb===
+{{en-verb|stab|stabs|stabbed|stabbing}}
 
-# To pierce or to wound with a pointed tool or [[weapon]], e.g. [[knife]] or [[dagger]].
-# To aim a blow with a weapon or a finger (''at'').
-
-===Intransitive verb===
-# To aim a [[blow]] with a weapon or a [[finger]].
-# To cause a [[sharp]], painful [[sensation]].
+#{{transitive}} To pierce or to wound with a pointed tool or [[weapon]], e.g. [[knife]] or [[dagger]].
+#{{transitive}} To aim a blow with a weapon or a finger (''at'').
+#{{intransitive}} To aim a [[blow]] with a weapon or a [[finger]].
+#{{intransitive}} To cause a [[sharp]], painful [[sensation]].
 
 ===Anagrams===
 *[[bats]]
 *[[tabs]]
 
+----
 ==Danish==
 ===Noun===
 '''stab''' {{c}}
@@ -59,10 +58,6 @@ Middle English
 [[Category:Danish nouns]]
 [[Category:English abstract nouns]]
 [[Category:English concrete nouns]]
-[[Category:English intransitive verbs]]
-[[Category:English nouns]]
-[[Category:English transitive verbs]]
-[[Category:English verbs]]
 
 [[fr:stab]]
 [[io:Stab]]
