--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -93,7 +93,7 @@
 '''cut'''
 # {{Cricket}} Of a shot played with a [[horizontal]] bat to hit the ball backward of point.
 # {{bodybuilding}} Having muscular [[definition]] in which individual groups of [[muscle]] fibers stand out among larger muscles.
-# {{colloquial}} [[circumcise|Circumcised]].
+# {{colloquial}} [[Circumcised]].
 ====Translations====
 *German: [[beschnitten]] (3)
 
