--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -104,7 +104,7 @@
 *Finnish: [[toistaa]]
 *French: [[jouer]]
 {{mid}}
-*Polish: [[grać]]
+*Polish: [[grać]], [[odtwarzać]]
 *Slovene: [[predvajati]]
 *Swedish: [[spela]], [[spela upp]]
 {{bottom}}
