Dutch added <icon#848583>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -50,6 +50,7 @@ From Latin ''icon'', from Greek ''eikon'', '''image'''
 '''the best example of something'''
 {{top}}
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
+*Dutch: [[icoon]], [[idool]] {{n}}
 *Finnish: [[symboli]], [[ikoni]]
 {{mid}}
 *Polish: [[ikona]] {{f}}, [[symbol]] {{m}}
@@ -61,7 +62,7 @@ From Latin ''icon'', from Greek ''eikon'', '''image'''
 '''small picture'''
 {{top}}
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
-*Dutch: [[icoon]] {{n}}
+*Dutch: [[icoon]], [[pictogram]] {{n}}
 *Finnish: [[kuvake]]
 {{mid}}
 *Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
