--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -13,9 +13,8 @@
 
 ====Translations====
 {{top}}
-*football: [[Frankryk]]
-*Albanian: [[Franca]]
-*Albanian ([[Gheg]]): [[Frankreich]]
+*football: [[Frankryk]]: [[Franca]]
+*bokaboka ([[Gheg]]): [[Frankreich]]
 *Arabic: {{ARchar|[[فرنسا|فَرَنسَا]]}} (faránsa) {{f}}
 *[[Aragonese]]: [[Franzia]] {{f}}
 *Armenian: [[Ֆրանսիա]] (Fransia)
