--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -19,7 +19,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Arabic: [[جميل]]
 *Breton: [[brav]], [[kaer]]
 *Bulgarian:[[красив, прекрасен]]
-*Chinese: [[漂亮]] (piao4liang4), [[美]] (měi, meili, mei3li4)
+*Chinese: [[漂亮]] (piàoliàng, piao4liang4), [[美]] (měi, meili, mei3li4)
 *Danish: [[smuk]] ''en'', [[smukt]] ''et'', [[smukke]] ''pl.''
 *Dutch: [[mooi]]
 *Esperanto: [[bela]]
