/* Noun */ added 2nd definition and sample <fit#855686>

--- a/en/f/fit.6886.wikitext
+++ b/en/f/fit.6886.wikitext
@@ -80,9 +80,12 @@
 
 ====Noun====
 {{en-noun|fit|fits}}
-#'' The degree to which something fits something else.
+#The degree to which something fits something else.
 #:''This shirt is a bad '''fit'''.''
 #:''Since he put on weight, his jeans have been a tight '''fit'''.''
+#(Advertising) how well a particular commercial execution captures the character or values of a brand.
+#:''The Wonder Bread advertising research results showed the “White Picket Fence” commercial had strong '''fit''' ratings.''
+
 =====Usage note=====
 Usually used in the singular preceeded by an indefinite article and an adjective.
 =====Translations=====
@@ -92,6 +95,9 @@ Usually used in the singular preceeded by an indefinite article and an adjective
 *German: [[Paßform]] ''f''
 {{mid}}
 {{bottom}}
+
+===References===
+''for 2nd definition: The Advertising Research Handbook'' Charles E. Young, Ideas in Flight, Seattle, WA, April 2005
 
 ===Etymology 2===
 ====Noun====
