--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -48,6 +48,8 @@
 
 * '''Pronunciation''': 위, 왜 (< Middle Korean 와)
 
+* '''[[Eumhun]] reading''': 왜나라
+
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': wi, wae (< wa)
 ** '''[[McCune-Reischauer]]''': wi, wae (< wa)
