--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From Latin ''icon'', from Greek ''eikon'', '''image'''
+Late Latin [[icon]] ← Greek [[εἰκών]] (likeness, image, figure, representation).
 
 === Noun ===
 '''icon'''
