--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -26,11 +26,12 @@ Late Latin ''icon'' ← Greek ''εἰκών'' (likeness, image, figure, represen
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]], [[symboli]]
+*Greek: [[απεικόνισμα]] [apiˈko̞niˌzma] ''n'', [[εικόνα]] [iˈko̞na] ''f'', [[απεικόνιση]] [apiˈko̞niˌsi] ''f'', [[παράσταση]] [paˈrastaˌsi] ''f'', [[αναπαράσταση]] [anapaˈrastaˌsi] ''f'', [[ομοίωμα]] [o̞ˈmio̞ˌma] ''n'', [[είδωλο]] [ˈiðo̞ˌlo̞] ''n'', [[περιγραφή]] [pe̞ˌriɣraˈfi] ''f'', [[απείκασμα]] [aˈpikaˌzma] ''n''
 {{mid}}
 *Polish: [[ikona]] {{f}}
-*Serbian:
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
+*Serbian
+:Cyrillic: [[икона#Serbian|икона]] {{f}}
+:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 '''religious painting'''
@@ -38,13 +39,12 @@ Late Latin ''icon'' ← Greek ''εἰκών'' (likeness, image, figure, represen
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]]
-*Greek:
-*:Modern: [[εικόνα]]
+*Greek: [[εικόνα]] [iˈko̞na] ''f'', [[εικόνισμα]] [iˈko̞niˌzma] ''n''
 {{mid}}
 *Polish: [[ikona]] {{f}}
-*Serbian:
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
+*Serbian
+:Cyrillic: [[икона#Serbian|икона]] {{f}}
+:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 '''the best example of something'''
@@ -52,11 +52,12 @@ Late Latin ''icon'' ← Greek ''εἰκών'' (likeness, image, figure, represen
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]], [[idool]] {{n}}
 *Finnish: [[symboli]], [[ikoni]]
+*Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] ''n'', [[ίνδαλμα]] [ˈinðalˌma] ''n'', [[εικόνα]] [iˈko̞na] ''f''
 {{mid}}
 *Polish: [[ikona]] {{f}}, [[symbol]] {{m}}
-*Serbian:
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
+*Serbian
+:Cyrillic: [[икона#Serbian|икона]] {{f}}
+:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 '''small picture'''
@@ -64,11 +65,12 @@ Late Latin ''icon'' ← Greek ''εἰκών'' (likeness, image, figure, represen
 *Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]], [[pictogram]] {{n}}
 *Finnish: [[kuvake]]
+*Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] ''n''
 {{mid}}
 *Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
-*Serbian:
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
+*Serbian
+:Cyrillic: [[икона#Serbian|икона]] {{f}}
+:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 These translations need to be checked by someone:
