/* Translations */ +corral <pen#864207>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -38,23 +38,24 @@
 *German: [[Stift]] {{m}}
 *Indonesian: pen, [[pena]]
 *Irish: [[peann]] {{m}}
-*Italian: [[penna]] {{f}}
+*Italian: [[penna#Italian|]] {{f}}
 {{mid}}
 *Japanese: [[ペン]] (pen)
 *Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
 *Portuguese: [[caneta]] {{f}}
 *Russian: [[ручка]] (rúčka) {{f}}
-*Spanish: [[pluma]] {{f}}
-*Swedish: [[penna]]
+*Spanish: [[esfero]] {{m}}, [[pluma]] {{f}}
+*Swedish: [[penna#Swedish|]]
 *Turkish: [[kalem]]
 {{bottom}}
 
 (''an enclosed area'')
 {{top}}
 *French: [[enclos]] {{m}}
-{{mid}}
 *Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, (''for sheep'') [[ovile]] {{m}}, recinto, chiuso
+{{mid}}
 *Russian: [[загон]] (zagón) {{m}}
+*Spanish: [[corrall]] {{m}}
 {{bottom}}
 
 (''female swan'')
