/* Noun */ from WP <cut#865643>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -81,6 +81,7 @@
 # A [[slab]], especially of meat.
 #:''That’s our finest '''cut''' of meat.''
 # {{fencing}} An attack made with a chopping motion of the blade, landing with its edge or point.
+#A deliberate [[snub]], typically a refusal to return a [[bow]] or other acknowledgement of acquaintance.
 
 ====Translations====
 {{top}}
