--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -85,8 +85,8 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-*Frisian: [[krûpe]]
-*German: [[kriechen]]
+*{{ttbc|Frisian}}: [[krûpe]]
+*{{ttbc|German}}: [[kriechen]]
 
 ===Derived terms===
 *[[creep up on]]
