minor fmt, {{subst:lang}}, {{ttbc}} <curve#866276>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Adjective===
 '''curve'''
 #(''obsolete'') Bent without angles; crooked; curved.
@@ -8,7 +9,7 @@
 ====Translations====
 ''See'' '''[[crooked]]''' ''and'' '''[[curved]]'''
 
-=== Noun ===
+===Noun===
 '''curve'''  (''plural'' '''[[curves]]''')
 
 #A gentle [[bend]], such as in a road.
@@ -60,7 +61,7 @@
 #To cause to swerve from a straight course.
 #:''to curve a ball in pitching it''
 
-==== Translations ====
+====Translations====
 
 '''bend, crook'''
 {{top}}
@@ -81,7 +82,7 @@
 #To bend or turn gradually from a given direction.
 #:''the road curves to the right''
 
-==== Translations ====
+====Translations====
 
 '''bend or turn gradually from a given direction'''
 {{top}}
@@ -95,10 +96,10 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-*Finnish: [[käyrä]]
-*Indonesian: [[kurva]]
-*{{ga}}: [[cuar]]
-*Japanese: [[曲線]] ([[きょくせん]], kyokusen)
+*{{ttbc|Finnish}}: [[käyrä]]
+*{{ttbc|Indonesian}}: [[kurva]]
+*[[Irish]]: [[cuar]]
+*{{ttbc|Japanese}}: [[曲線]] ([[きょくせん]], kyokusen)
 
 [[Category:1000 English basic words]]
 
